[BISERVER-14343] - PUC tab content gets truncated upon browser resize. Fixed IE11 issues

--- a/widgets/src/main/resources/org/pentaho/gwt/widgets/themes/public/themes/crystal/globalCrystal.css
+++ b/widgets/src/main/resources/org/pentaho/gwt/widgets/themes/public/themes/crystal/globalCrystal.css
@@ -806,14 +806,11 @@ border-top: 4px solid transparent;
   position: relative;
 }
 
-@media not screen and (-ms-high-contrast: active), not screen and (-ms-high-contrast: none) {
+/* Webkit browsers only */
+@media screen and (-webkit-min-device-pixel-ratio:0) {
   .pentaho-tab-deck-panel > div {
     height: auto !important;
   }
-}
-
-/* Webkit browsers only */
-@media screen and (-webkit-min-device-pixel-ratio:0) {
   #solutionNavigatorAndContentPanel .pentaho-tab-deck-panel>DIV {
     position: absolute;
     top: 0px;
