--- a/widgets/src/main/resources/org/pentaho/gwt/widgets/themes/public/themes/ruby/globalRuby.css
+++ b/widgets/src/main/resources/org/pentaho/gwt/widgets/themes/public/themes/ruby/globalRuby.css
@@ -1288,14 +1288,11 @@ input#FT_rankCount {
   position: relative;
 }
 
-@media not screen and (-ms-high-contrast: active), not screen and (-ms-high-contrast: none) {
+/* Webkit browsers only */
+@media screen and (-webkit-min-device-pixel-ratio:0) {
   .pentaho-tab-deck-panel > div {
     height: auto !important;
   }
-}
-
-/* Webkit browsers only */
-@media screen and (-webkit-min-device-pixel-ratio:0) {
   #solutionNavigatorAndContentPanel .pentaho-tab-deck-panel>DIV {
     position: absolute;
     top: 0px;
@@ -1303,7 +1300,6 @@ input#FT_rankCount {
     bottom: 0px;
     right: 0px;
   }
-
 }
 
 /* properties dialog panels */
